# RustyVault

./: Cargo.toml  README.md
data/: db.json
src/: databasemanager.rs  db.rs  lib.rs  main.rs  passwordmanager.rs  security.rs
src/passwordmanager/: home.rs  init.rs  list_functionality.rs  pw_list.rs  second.rs  user_input.rs
