[package]
name = "RustyBox"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/saranshsaini/RustyBox"
authors = ["Saransh Saini <saranshs@berkeley.edu>"]
description = "A simple gui password vault in your terminal. Encrypted and secure."
keywords = ["terminal", "gui", "password_vault"]
categories = ["command-line-utilities", "gui"]
license = "MIT"

[dependencies]
crossterm = { version = "0.19", features = [ "serde" ] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.66"
chrono = { version = "0.4", features = ["serde"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
rust-argon2 = "1.0"
directories = "4.0.1"
aes-gcm = "0.10.1"
aes = "0.8.2"
rand = "0.8.5"
clipboard = "0.5.0"